Add DTO-based validation and enable request validation